--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
   <head>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <title>Toko Aneka Busana</title>
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <title>Portofolio</title>
   </head>
 
   <body>
 
-    <header>
-      <img id="logo" src="img/aneka-busana.jpg" width="200px" />	
+    <header>	
       <nav>
         <ul id="identification">
           <a href="#"><li>Login</li></a>
@@ -16,52 +16,46 @@
         </ul>
         <ul id="about">
           <a href="#"><li>Home</li></a>
-          <a href="#"><li>Contact Us</li></a>
         </ul>
       </nav>
     </header>
 
     <section>
-	  <div class="kids">
-	  	<h3>Kid's Shirts</h3>
-	    <ul>
-	    	<li><img src="img/kids/kids1.jpg" width="200px"></li>
-	    	<li><img src="img/kids/kids2.jpg" width="200px"></li>
-	    	<li><img src="img/kids/kids3.jpg" width="200px"></li>
-	    	<li><img src="img/kids/kids4.jpg" width="200px"></li>
-	    </ul>
-	  </div>
-	  <div class="teenagers">
-	  	<h3>Teenager's Shirts</h3>
-	    <ul>
-	    	<li><img src="img/teenagers/teenagers1.jpg" width="200px"></li>
-	    	<li><img src="img/teenagers/teenagers2.jpg" width="200px"></li>
-	    	<li><img src="img/teenagers/teenagers3.jpg" width="200px"></li>
-	    	<li><img src="img/teenagers/teenagers4.jpg" width="200px"></li>
-	    </ul>
-	  </div>
-	  <div class="adult">
-	  	<h3>Adult's Shirts</h3>
-	    <ul>
-	    	<li><img src="img/adult/adult1.jpg" width="200px"></li>
-	    	<li><img src="img/adult/adult2.jpg" width="200px"></li>
-	    	<li><img src="img/adult/adult3.jpg" width="200px"></li>
-	    	<li><img src="img/adult/adult4.jpg" width="200px"></li>
-	    </ul>
-	  </div>
-	  <div class="old">
-	  	<h3>Old's Shirts</h3>
-	    <ul>
-	    	<li><img src="img/old/old1.jpg" width="200px"></li>
-	    	<li><img src="img/old/old2.jpg" width="200px"></li>
-	    	<li><img src="img/old/old3.jpg" width="200px"></li>
-	    	<li><img src="img/old/old4.jpg" width="200px"></li>
-	    </ul>
-	  </div>  
+        <h1 id="week1">Week 1</h1>
+        <div class="day1">
+          <h1 id="daytitle">Day 1</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+          </div>
+        <div class="day2">
+          <h1 id="daytitle">Day 2</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+          </div>
+        <div class="day3">
+          <h1 id="daytitle">Day 3</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>
+        <div class="day4">
+          <h1 id="daytitle">Day 4</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>
+        <div class="day5">
+          <h1 id="daytitle">Day 5</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>  
     </section>
 
     <footer>
-      <h5>copyright &copy; 2017 by Husni Habil</h5>
+      <h1>Contact</h1>
+      <p>Husni Habil<br>
+          Jl.Raya Jakarta-Serang KM. 19<br>
+          Kibin, Kab. Serang<br>
+          42185 Banten<br>
+          Indonesia<br><br>
+          Phone: +62 85794556187<p>
+      <h1>About</h1>
+      <p>
+        Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt.<br> Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus.<br> Etiam placerat eam in.
+      </p>
     </footer>
 
   </body>
