--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-    <title>Portofolio</title>
+    <link rel="shortcut icon" href="img/icon.ico" />
+    <title>Portfolio</title>
   </head>
 
   <body>
