Tangled Game Added
Adding Tangled Game to Portfolio

--- a/index.html
+++ b/index.html
@@ -21,8 +21,128 @@
       </nav>
     </header>
 
-    <section>
-        <h1 id="week1">Week 1</h1>
+    <section id='Week 1'>
+        <h1 id="week1">Week 1 (My First Website)</h1>
+        <div class="day1">
+          <h1 id="daytitle">Day 1</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+          </div>
+        <div class="day2">
+          <h1 id="daytitle">Day 2</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+          </div>
+        <div class="day3">
+          <h1 id="daytitle">Day 3</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>
+        <div class="day4">
+          <h1 id="daytitle">Day 4</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>
+        <div class="day5">
+          <h1 id="daytitle">Day 5</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>  
+    </section>
+
+     <section id='Week 2'>
+        <h1 id="week2">Week 2 (The World Of Javascript)</h1>
+        <div class="day1">
+          <h1 id="daytitle">Day 1</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+          </div>
+        <div class="day2">
+          <h1 id="daytitle">Day 2</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+          </div>
+        <div class="day3">
+          <h1 id="daytitle">Day 3</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>
+        <div class="day4">
+          <h1 id="daytitle">Day 4</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>
+        <div class="day5">
+          <h1 id="daytitle">Day 5</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>  
+    </section>
+
+     <section id='Week 3'>
+        <h1 id="week3">Week 3 (Node JS and Javascript Training)</h1>
+        <div class="day1">
+          <h1 id="daytitle">Day 1</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+          </div>
+        <div class="day2">
+          <h1 id="daytitle">Day 2</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+          </div>
+        <div class="day3">
+          <h1 id="daytitle">Day 3</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>
+        <div class="day4">
+          <h1 id="daytitle">Day 4</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>
+        <div class="day5">
+          <h1 id="daytitle">Day 5</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>  
+    </section>
+
+     <section id='Week 4'>
+        <h1 id="week4">Week 4 (Logics in Javascript)</h1>
+        <div class="day1">
+          <h1 id="daytitle">Day 1</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+          </div>
+        <div class="day2">
+          <h1 id="daytitle">Day 2</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+          </div>
+        <div class="day3">
+          <h1 id="daytitle">Day 3</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>
+        <div class="day4">
+          <h1 id="daytitle">Day 4</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>
+        <div class="day5">
+          <h1 id="daytitle">Day 5</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>  
+    </section>
+
+     <section id='Week 5'>
+        <h1 id="week5">Week 5 (The World of DOM)</h1>
+        <div class="day1">
+          <h1 id="daytitle">Day 1</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+          </div>
+        <div class="day2">
+          <h1 id="daytitle">Day 2</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+          </div>
+        <div class="day3">
+          <h1 id="daytitle">Day 3</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>
+        <div class="day4">
+          <h1 id="daytitle">Day 4</h1>
+            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+        </div>
+        <div class="day5">
+          <h1 id="daytitle">Day 5</h1>
+            <p>Hari ke-5 dari week ini kami diberikan tugas untuk membuat website dengan memakai DOM yang sudah dipelajari. Website yang saya buat berupa petualangan interaktif antara Rapunzel dan Flynn pada film Tangled :). Berikut <a href="game.html">link</a> gamenya, semoga terhibur!! :))))</p>
+        </div>  
+    </section>
+
+     <section id='Week 6'>
+        <h1 id="week6">Week 6 (ES6 and Programming Paradigm)</h1>
         <div class="day1">
           <h1 id="daytitle">Day 1</h1>
             <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
@@ -58,6 +178,8 @@
         Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt.<br> Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus.<br> Etiam placerat eam in.
       </p>
     </footer>
+
+    <script src='script.js'></script>
 
   </body>
 
