--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
         <h1 id="week1">Week 1 (My First Website)</h1>
         <div class="day1">
           <h1 id="daytitle">Day 1</h1>
-            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+            <p>Hari pertama pada week 1. Kami melakukan perkenalan dengan teman-teman di grup slack. Setelah itu, kami mempelajari dasar-dasar HTML5 di Codeacademy. Disini saya mulai mengenal bagaimana membuat strutur pada html, bagaimana konsep dasar di html dan apa saja fitur terbaru dari html5 yang tidak ada pada html sebelumnya. Pada Codeacademy, saya dikenalkan dengan struktur html, fundamental html, dan apa saja elemen-elemen pada html.</p>
           </div>
         <div class="day2">
           <h1 id="daytitle">Day 2</h1>
-            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+            <p>Hari kedua. Saya berkenalan dengan CSS. Awalnya saya membaca tentang pengertian CSS dan bagaimana caranya membuat tampilan web dengan menggunakan CSS. Untuk menguasai CSS, saya mempelajari course pada codeacademy, syllabus 3, syllabus 4, dan syllabus 5. Di syllabus 3 saya dikenalkan dengan basic setup dan struktur dari CSS, syllabus 4 diperkenalkan bagaimana menambahkan warna dan mengubah-ubah font pada text, sedangkan syllabus 5 mempelajari bagaimana memanggil dan membuat tampilan menarik pada elemen-elemen di html (div, class, id). Menurut saya pelajaran CSS ini menarik karena dengan CSS kita dapat menampilan halaman web yang menarik sehingga enak dipandang, seperti tugas terakhir pada hari ini yaitu menghias halaman web dengan box berwarna-warni.</p>
           </div>
         <div class="day3">
           <h1 id="daytitle">Day 3</h1>
-            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+            <p>Hari ketiga. Pada hari ini semua tugas berasal dari codeacademy, dengan syllabus 6, 7, 8, dan 9. Keseluruhan materinya mempelajari bagaimana memanipulasi elemen-elemen html, mulai dari box model, positioning, menambahkan images, dan mengorganisir tables. Syllabus 6 berisi tentang box model pada html. Setiap elemen pada html direpresentasikan sebagai box(persegi) dengan panjang dan lebar yang dapat ditentukan. Batas-batas pada box tersebut dinamakan border. Di syllabus 6 juga dikenalkan dengan konten dan manipulasi model box. Syllabus 7 mempelajari positioning dan layouting pada elemen html (menggunakan CSS tentunya). Syllabus 8 mulai diperkenalkan bagaimana menambahkan images pada halaman web. Terakhir, syllabus 9 dipelajari bagaimana membuat tables di html dan CSS. Materi pada hari harus benar-benar dipahami menurut saya, karena kesulitan paling besar dalam mendesign halaman web adalah menempatkan elemen-elemen dengan benar di halaman web.</p>
         </div>
         <div class="day4">
           <h1 id="daytitle">Day 4</h1>
-            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+            <p>Hari keempat. Tugas pertama saya membuat halaman web sederhana dan mendesaign halaman tersebut menggunakan CSS. Halaman web ini berisi gambar, header, text box ditengah, dan footer. Halaman web ini kemudian diupload ke github. Sebelumnya, saya juga mempelajari bagaimana menggunakan github dan menakses file-file dari dan ke github itu sendiri. Dan juga saya mempelajari bagaimana menggunakan Markdown.</p>
         </div>
         <div class="day5">
           <h1 id="daytitle">Day 5</h1>
-            <p>Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque scripserit pri ex, et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea quem sint, nam in minim voluptatibus. Etiam placerat eam in.</p>
+            <p>Hari terakhir pada week 1. Tugas kali ini lebih ke kreativitas masing-masing orang karena kami membuat halaman website milik sendiri. Sebelum membuat web ini, saya mempelajari materi bagaimana membuat perencanaan, proses, dan manajemen dalam membuat web. Website yang saya buat berupa web informasi tentang diri sendiri (portofolio). Didalam web ini berisi data diri saya dan aktivitas-aktivitas yang saya lakukan di Hacktiv8. Ya benar, websitenya adalah ini, yang sedang anda lihat sekarang :D. Website ini nantinya akan saya jadikan sebagai media informasi dan sharing saya selama beraktivitas di bootcamp Hacktiv8.</p>
         </div>  
     </section>
 
